# mta-stops-tracker

./: .env.example  .gitignore  .pre-commit-config.yaml  docker-compose.yml  gtfs_realtime_pb2.py  main.py  mta_processor.py  mta_processor_test.py  nginx-example.conf  requirements.txt  server.py  test_mta_processor.py
.github/workflows/: build-backend.yml  build-frontend.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  server.py
backend/deploy/: deploy.sh
backend/mta_flask/: __init__.py  app_factory.py  location.py  mta_processor.py  server.py  stations.py
backend/mta_flask/fetcher/: __init__.py
backend/mta_flask/models/: Station.py  StationSelection.py  StopTimeUpdate.py  station.py  station_selection.py  stop.py
backend/mta_flask/proto/: gtfs_realtime_pb2.py  gtfs_realtime_pb2.pyi
backend/tests/: test_mta_processor.py
deploy/: deploy.sh  init.sh  mta-init.sh  nginx-example.conf  run.sh  start.sh  upgrade.sh
frontend/: .eslintrc.json  Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/AppBar/: AppBar.tsx  SettingsIcon.tsx  SettingsModal.tsx  TimeDisplay.tsx
frontend/src/components/Modal/: Modal.tsx  ModalContext.tsx  SettingsDisplay.test.tsx  SettingsDisplay.tsx  SettingsModal.tsx
frontend/src/components/NextStopsDisplay/: NextStopsDisplay.css  NextStopsDisplay.tsx
frontend/src/components/Settings/: AppBar.tsx  Setttings.tsx
frontend/src/components/actions/: stationsActions.ts
frontend/src/hooks/: reduxHooks.ts
frontend/src/reducers/: stationsReducer.ts  store.ts
idea/: todo.md
mta-fe/: package-lock.json  package.json
mta-fe/src/: App.css  App.jsx  App.tsx  reset.css
test-data/: example-ace-results  example-ace-results-txt
