[project]
name = "mta_flask"
version = "0.0.3"
authors = [{ name="Mark Colby", email="macolby14@gmail.com" }]
description = "A python webserver that gives NYC MTA times"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
'flask[async] >= 2.2.2, <3',
'protobuf >= 4.21.12, <5',
'python-dotenv >= 0.21.0, <1',
'requests >= 2.28.1, <3',
'geopy >= 2.3.0, <3',
'pydantic >= 1.10.6, <2',
'httpx == 0.24.1',
'build == 0.10.0'
]

[project.optional-dependencies]
lint = [
  "flake8 >= 6.0.0, <7",
  "flake8-bugbear >= 23.2.3, <24",
  "flake8-black == 0.3.6",
  "flake8-isort >= 6.0.0, <7",
  "black >= 23.3.0, <24",
  "toml == 0.10.2",
  "isort >= 5.12.0, <6",
  "mypy >= 1.1.1, <2",
  "mypy-protobuf >= 3.4.0, <4",
  "types-requests >= 2.28.0, <3",
]

[project.urls]
"Homepage" = "https://github.com/macolby14/mta-py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
exclude = [
    ".venv/",
    "mta_flask/proto/gtfs_realtime_pb2.py",
]
follow_imports = "skip"

[tool.flake8]
max-line-length = 60



